# universe_best_cuda_practice

./: .clang-format  .gitignore  CMakeLists.txt  README.md  ncu.sh
1_cuda_reduce_study/: README.md  my_reduce_v0_global_memory.cu  my_reduce_v1_shared_memory.cu  my_reduce_v2_no_divergence_branch.cu  my_reduce_v3_no_bank_conflict.cu  my_reduce_v4_add_during_load_plan_a.cu  my_reduce_v4_add_during_load_plan_b.cu  my_reduce_v5_unroll_last_warp.cu  my_reduce_v6_completely_unroll.cu  my_reduce_v7_mutli_add.cu  my_reduce_v8_shuffle.cu  reduce.cu
2_cuda_sgemm_study/: CMakeLists.txt  README.md  my_sgemm_v0_global_memory.cu  my_sgemm_v1_shared_memory.cu  my_sgemm_v2_shared_memory_sliding_windows.cu  my_sgemm_v3_increase_work_of_per_thread.cu  my_sgemm_v4_using_float4.cu  my_sgemm_v5_register_outer_product.cu  my_sgemm_v6_register_outer_product_float4.cu  my_sgemm_v7_a_smem_transpose.cu  my_sgemm_v8_double_buffer.cu
3_softmax/: README.md  softmax_v0_native.cu  softmax_v1_shared_memory.cu  softmax_v2_shfl_signal_warp.cu  softmax_v3_shfl_mutli_warp.cu
4_reduce/: README.md  reduce_v0_native.cu  reduce_v1_thread_more_num.cu  reduce_v2_no_bank_conflict.cu  reduce_v3_shfl.cu  reduce_v4_warp_shfl.cu
5_matmul/: README.md  draw.py  matmul_v0_native.cu  matmul_v1_shared_memory.cu  matmul_v2_thread_tile.cu  matmul_v3_float4.cu  matmul_v4_double_buffer.cu  matmul_v5_warp_tile.cu
6_atomic/: README.md  histogram_shared.cu
7_transpose/: README.md  transpose_v0_native.cu  transpose_v1_shared_mm.cu  transpose_v2_shared_mm_unpad.cu  transpose_v3_shared_mm_unrollpad.cu
(+2 files in other folders)
